SERVER-85516 Fix MatchExpression parameterization to assign the correct reused parameter number (#18229)

GitOrigin-RevId: 694882b37bb217437d63b672c8a0243540abf80c